[package]
name = "peertube"
version = "0.1.1"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
description = "Peertube API client"
license = "MIT"
repository = "https://github.com/sanpii/peertube"
categories = ["web-programming::http-client"]
keywords = ["peertube"]
rust-version = "1.62.0"

[dependencies]
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.reqwest]
version = "0.11"
features = ["json", "multipart"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.9"

[dev-dependencies.clap]
version = "4.0"
features = ["derive"]

[dev-dependencies.tokio]
version = "1.5"
features = ["macros", "rt", "rt-multi-thread"]
