[package]
name = "peertube"
version = "0.2.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
description = "Peertube API client"
license = "MIT"
repository = "https://github.com/sanpii/peertube"
categories = ["web-programming::http-client"]
keywords = ["peertube"]
rust-version = "1.62.0"

[dependencies]
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "2.0"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "serde", "std"]

[dependencies.reqwest]
version = "0.12"
features = ["json", "multipart"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
dotenvy = "0.15"
env_logger = "0.11"

[dev-dependencies.clap]
version = "4.0"
features = ["derive"]

[dev-dependencies.tokio]
version = "1.5"
features = ["macros", "rt", "rt-multi-thread"]

[features]
default = []
v5 = []
